# Linux201-docs

./: .autocorrectignore  .gitignore  .markdownlint.jsonc  404.html  CNAME  Makefile  README.md  index.html  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements-ci.txt  requirements.txt  sitemap.xml  zensical.yml
.github/workflows/: autofix.yaml  build.yaml  build.yml  deploy.yaml  non-master-check.yaml
advanced/: index.html
advanced/caddy/: index.html
advanced/config/: index.html
advanced/cuda/: index.html
advanced/dac-mac/: index.html
advanced/daemon/: index.html
advanced/desktop/: index.html
advanced/elk/: index.html
advanced/git-server/: index.html
advanced/hpc/: index.html
advanced/nmap/: index.html
assets/: gitconfig_sample
css/: admonitions.scss  extra.css  extra.scss
dev/: index.html
dev/git/: index.html
dev/language/: index.html
dev/ssh/: index.html
dev/vcs/: index.html
docs/: _redirects  foreword.md  index.md  man.md  preface.md  ssh.md
docs/advanced/: caddy.md  config.md  cuda.md  dac-mac.md  desktop.md  elk.md  git-server.md  index.md  nmap.md
docs/assets/: RAID and SSD-1709828565742.json  gitconfig_sample  他现在运行的是linux我想在上面安装windows.txt
docs/css/: admonitions.scss  counter.scss  extra.css  extra.scss
docs/dev/: git.md  index.md  language.md  library.md  ssh.md
docs/ops/: accounts.md  booting.md  checklist.md  database.md  debug.md  index.md  monitor.md  network.md  package.md  security.md  server-room.md  server.md  service.md  storage.md
docs/spec/: contributors.md  writing.md
foreword/: index.html
includes/: authors.md  man.md
man/: index.html
ops/: index.html
ops/accounts/: index.html
overrides/: sitemap.xml
preface/: index.html
scripts/: custom-admonitions.py
search/: search_index.json
tests/: conftest.py  test_infrastructure.py
(+108 files in other folders)
